--- a/ClientServer2/Casestudy/casestudy_client/.vscode/launch.json
+++ b/ClientServer2/Casestudy/casestudy_client/.vscode/launch.json
@@ -8,10 +8,10 @@
 			"type": "chrome",
 			"request": "launch",
 			"name": "vuejs: chrome",
-			"url": "http://localhost:8081",
+			"url": "http://localhost:8080",
 			"webRoot": "${workspaceFolder}/src",
 			"sourceMapPathOverrides": {
-				"webpack:///src/*": "${webRoot}/*"
+				"webpack://casestudy_client/./src/*": "${webRoot}/*"
 			}
 		}
 	]
