--- a/ClientServer2/ExercisesAPI/ExercisesAPI/appsettings.json
+++ b/ClientServer2/ExercisesAPI/ExercisesAPI/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ExercisesAPIdb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, IT CAN BE ANY STRING. ALSO IM DAN."
   }
 }
